--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">Budget</string>
-    <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_register_expenses">Register Expenses</string>
+    <string name="title_create_category">Create Category</string>
+    <string name="name">Name</string>
+    <string name="name_of_the_new_category">Name of the new category</string>
+    <string name="targeted_expenses_per_month">Targeted expenses per month</string>
+    <string name="create">Create</string>
+    <string name="primary_color">Primary color</string>
+    <string name="secondary_color">Secondary color</string>
+    <string name="information">Information</string>
+    <string name="datetime">Date &amp; Time</string>
 </resources>
